chore(Styles): Fix horizontal scrollbar height being too large

--- a/uplink_skeleton/src/style.scss
+++ b/uplink_skeleton/src/style.scss
@@ -31,6 +31,7 @@ body,
 /* width */
 ::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
     opacity: 1;
 
     &:hover {
